Updated Index Page

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 .team-section{
     padding: 3rem;
     text-align: center;
@@ -77,5 +84,73 @@
     border-radius: 8px;
     display: block;
   }
+
+  .img-container{
+    position: relative;
+    text-align: center;
+    color: white;
+
+  }
+
+  .center{
+    font-size: 3em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    font-family: fantasy;
+  }
+
+  .afg-img{
+    width: 100%;
+    height: auto;
+    display: block;
+    opacity: 0.8;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    overflow: hidden;
+    background-color: rgb(57, 91, 57);
+    justify-content: center;
+  }
   
+
+
+  ul li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+  }
+
+  ul li a:hover {
+    background-color: rgb(44, 69, 44);;
+  }
+
+  .desc{
+    display: flex;
+    justify-content: center;
+    padding: 3rem;
+    background-color: rgb(57, 91, 57);
+
+  }
+
+  .desc-writing{
+    font-weight: bold;
+    font-family: fantasy;
+    background-color:  rgb(162, 143, 43);
+    width: 50%;
+    color: white;
+    width: 50%;
+    padding: 1.5rem;
+    border-radius: 20px;
+    
+  }
   
