--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,91 +4,12 @@
     box-sizing: border-box;
 }
 
-
-.team-section{
-    padding: 3rem;
-    text-align: center;
-}
-
-.grid{
-    display: flex;
-    /*grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));*/
-    flex-direction: column;
-    gap: 4rem;
-}
-
-.team-grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 2rem;
-    margin-top: 1.5rem;
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
-  
-}
-
-
-.card {
-    background: #f9f9f9;
-    padding: 1.5rem;
-    border-radius: 12px;
-    transition: transform 0.2s ease;
-  }
-
-.card:hover {
-    transform: translateY(-5px);
-  }
-
-.card img {
-    width: 100%;
-    border-radius: 8px;
-  }
-
-.card h3 {
-    margin-top: 1rem;
-  }
-  
-.card p {
-    color: #666;
-  }
-
-.gallery-section {
-    padding: 3rem;
-    text-align: center;
-  }
-  
-.gallery-section img {
-    width: 100%;
-    border-radius: 10px;
-    object-fit: cover;
-  }
-
-  .gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 2rem;
-  
-    max-width: 1100px;
-    margin: 2rem auto;
-  }
-  
-  .gallery-item {
-    background: #f9f9f9;
-    padding: 4rem;
-    border-radius: 12px;
-  }
-  
-  .gallery-item img {
-    width: 100%;
-    border-radius: 8px;
-    display: block;
-  }
-
   .img-container{
     position: relative;
     text-align: center;
     color: white;
+    width: 100%;
+    height: 49rem;
 
   }
 
@@ -104,9 +25,10 @@
 
   .afg-img{
     width: 100%;
-    height: auto;
+    height: 100%;
     display: block;
     opacity: 0.8;
+    object-fit: fill;
   }
 
   ul {
@@ -153,4 +75,74 @@
     border-radius: 20px;
     
   }
+
+  .meet{
+    margin-bottom: 2%;
+    font-size: 2.5em;
+  }
+
+  .about{
+    /*background-color: rgb(131, 161, 131);*/
+  }
   
+  .flex-display{
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0 5% 2%;
+  }
+
+  .cards{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    border-radius: 10%;
+
+  }
+
+  .cards-gallery{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 15%;
+    border-radius: 10%;
+
+  }
+
+  .cards:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+  .container{
+    padding: 5px 16px;
+  }
+
+  .container-gallery{
+    text-align: center;
+    padding: 5px;
+
+  }
+
+  .team{
+    text-align: center;
+    padding: 2%;
+  }
+
+  .team-name{
+    padding-bottom: 2%;
+  }
+
+
+
+  .flex-display-about{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 5% 2%;
+  }
+
+ 
+
+  
+ 
