--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,23 +4,37 @@
     box-sizing: border-box;
 }
 
+.no-scroll {
+  height: 100vh;
+  overflow: hidden;
+}
+
+
   .img-container{
     position: relative;
     text-align: center;
-    color: white;
+    color: black;
     width: 100%;
-    height: 49rem;
+    height: 100vh;
 
   }
 
   .center{
     font-size: 3em;
     position: absolute;
-    top: 50%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-weight: bold;
+    font-weight: bolder;
     font-family: fantasy;
+    color: white;
+  }
+
+  .home-links{
+    top: 50%;
+    left: 50%;
+    transform: translate(0%, -130%);
+
   }
 
   .afg-img{
@@ -30,6 +44,7 @@
     opacity: 0.8;
     object-fit: fill;
   }
+  
 
   ul {
     list-style-type: none;
@@ -76,38 +91,28 @@
     
   }
 
-  .meet{
-    margin-bottom: 2%;
-    font-size: 2.5em;
+
+
+  .img-container-2{
+    width: 100%;
+    height: 16.5rem;
+    overflow: hidden;
   }
 
-  .about{
-    /*background-color: rgb(131, 161, 131);*/
-  }
   
-  .flex-display{
-    display: flex;
-    gap: 20px;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 0 5% 2%;
-  }
-
+ 
   .cards{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 20px 20px 10px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 20%;
+    /*width: 20%;
+    height: 100%;*/
     border-radius: 10%;
-
+    flex: 1 1 22%;
+  min-width: 180px;   /* only a safety floor */
+  max-width: 260px; 
+  background-color: white;
   }
 
-  .cards-gallery{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 15%;
-    border-radius: 10%;
-
-  }
 
   .cards:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -126,21 +131,104 @@
   .team{
     text-align: center;
     padding: 2%;
+   
   }
+
+  
 
   .team-name{
-    padding-bottom: 2%;
+    padding-bottom: 3%;
+    flex-basis: 100%;
+    text-shadow: 2px 2px rgba(0,0,0,0.2);
+    font-size: 2.5em;
+    font-weight: bolder;
+    font-family: fantasy;
+
+
+
   }
 
-
+  .flex-display{
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 5%;
+  }
 
   .flex-display-about{
     display: flex;
     gap: 20px;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 0 5% 2%;
+    padding: 5%;
+   
   }
+
+  .flex-display-1{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 0%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+    
+    }
+  .flex-display-2{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 0%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+   
+    }
+
+
+  
+  
+
+ 
+
+  .presidents{
+    margin-bottom: 2%;
+    
+  }
+
+  .vice{
+    margin-bottom: 2%;
+
+  }
+
+  .admin{
+    margin-bottom: 2%;
+
+  }
+
+  .market{
+    margin-bottom: 2%;
+
+  }
+  .events-cult{
+    margin-bottom: 2%;
+
+  }
+
+ 
+
+  .flex-display-about,
+  .flex-display-1,
+  .flex-display-2 {
+    width: 85%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+
 
  
 
